# stonkschool

./: .gitignore  ARCHITECTURE_DIAGRAMS.md  BACKEND_RUNNING_STATUS.md  DOCUMENTATION_UPDATE_LOG.md  HOW_IT_WORKS.md  MVP_TESTING_GUIDE.md  NEXT_STEPS.md  PATH_TO_PRODUCTION.md  PRODUCTION_DEPLOYMENT.md  PROJECT_SUMMARY.md  QUICK_REFERENCE.md  README.md  REPOSITORY_STRUCTURE.md  SELF_CONTAINED_CONFIRMATION.md  TECHNICAL_CHANGES.md  VENDORED_DEPENDENCIES.md  VERIFICATION_REPORT.md
Documents/: API_Specification_Document.md  Component_Architecture_Document.md  Database_Design_Document.md  DevOps_&_Deployment_Document.md  Feature_Requirements_Document_(FRD).md  MVP_Vision.md  README.md  Sequence_Diagram_Descriptions.md  State_Machine_Diagram_Description.md  User_flow.md
backend/: .env.example  .gitignore  Cargo.toml  QUICKSTART.md  README.md  backend2.err  seed.sql
backend/migrations/: 20260106002_create_assets_and_market_data.sql  20260106_001_create_users_and_wallets.sql  20260106_003_create_contests.sql
backend/src/: config.rs  db.rs  error.rs  main.rs
backend/src/middleware/: mod.rs  session.rs
backend/src/modules/: assets.rs  auth.rs  contests.rs  market_data.rs  mod.rs  replay.rs  users.rs  wallet.rs  websocket.rs
backend/src/services/: contest_executor.rs  market_data.rs  market_data_ingester.rs  mod.rs  seeder.rs
frontend/: .env.local.example  .gitignore  README.md  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
frontend-new/: package.json
frontend-new/app/: globals.css  landing.tsx  layout.tsx  page.tsx
(+74 files in other folders)
