[package]
name = "stonkschool-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web Framework
axum = { version = "0.7", features = ["ws", "macros"] }
tokio = { version = "1", features = ["full"] }
tower = { version = "0.4", features = ["timeout", "limit"] }
tower-http = { version = "0.5", features = ["cors", "trace", "compression-full"] }

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "migrate", "rust_decimal"] }

# Serialization & Validation
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
validator = { version = "0.18", features = ["derive"] }

# Authentication & Security
oauth2 = "4.4"
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
cookie = "0.18"
argon2 = "0.5"

# Utilities
uuid = { version = "1.6", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }
rust_decimal = { version = "1.33", features = ["serde-float"] }
anyhow = "1.0"
thiserror = "1.0"

# Tracing & Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Environment & Config
dotenvy = "0.15"
config = "0.14"

# WebSockets
futures-util = "0.3"
tokio-stream = "0.1"

# Market Data Integration (zerodha-ss)
# Now vendored inside stonkschool directory
zerodha-tl = { path = "../zerodha-ss" }

# Rate Limiting & Security
governor = "0.6"

[dev-dependencies]
tokio-test = "0.4"
